<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MoviesFragment"
    android:padding="20dp">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/populars"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/populars"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:itemCount="5"
        tools:listitem="@layout/movie_view" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qualifieds"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/qualifieds"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:itemCount="5"
        tools:listitem="@layout/movie_view" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        tools:itemCount="5"
        tools:listitem="@layout/movie_view" />

        </LinearLayout>
    </ScrollView>



</FrameLayout>