<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment"
    android:padding="20dp">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >
    <!-- TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:textSize="32dp"
        android:textStyle="bold"
        android:gravity="center"/ -->

    <ImageView
        android:id="@+id/picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorits"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cero"
                android:textSize="50sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#ff0000"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qualifieds1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/qualifieds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cero"
                android:textSize="50sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#ff0000"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>

</FrameLayout>